objects/OpportunityHistory__c.object
<CustomObject>
    <description>What: Used in analytics demo data tool. DO NOT RENAME.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <label>Forecast Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>Opportunity ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>Stage Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>OpportunityHistory__c</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>OpportunityHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunityHistory__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>